Reenabled React.StrictMode and fixed note text wrapping issue

--- a/src/styles/Note.css
+++ b/src/styles/Note.css
@@ -19,14 +19,17 @@
 }
 
 .note-text {
-
-    background-color: #ffffff;
-    color: black;
-    border-radius: 15px;
     margin: 3px 0;
     padding: 10px;
 
-    /* Background */
+    /* Wrapping for continous strings of text without spaces as easy line breaking points */
+    word-break: break-all;
+
+    border-radius: 15px;
+
+    background-color: #ffffff;
+
+    /* Shadow */
     box-shadow: 0px 0px 12px 10px rgb(234, 234, 234);
 }
 
